# dcv-extension-sdk-samples

./: .gitignore  README.md  dcv_extensions_sdk_examples.sln
.github/workflows/: build-rust.yml
examples/c/extension-virtual-channel-c/: dcvextension-c.vcxproj  setup_protobuf-c.bat
examples/c/extension-virtual-channel-c/src/: main.c  simplelogger.c  simplelogger.h
examples/cpp/extension-virtual-channel-cpp/: dcvextension-cpp.vcxproj  setup_protobuf.bat
examples/cpp/extension-virtual-channel-cpp/src/: main.cpp  simplelogger.c  simplelogger.h
examples/csharp/extension-geometry-csharp/: App.config  DCVExtensionGeometryCS.csproj  Program.cs  app.manifest  packages.config
examples/csharp/extension-geometry-csharp/DcvExtensions/: Processor.cs  Reader.cs  SimpleLogger.cs  VirtualChannel.cs  Writer.cs
examples/csharp/extension-geometry-csharp/Properties/: AssemblyInfo.cs
examples/csharp/extension-geometry-csharp/manifest/: dcv_extension_manifest.json
examples/csharp/extension-geometrygui-csharp/: App.config  App.xaml  App.xaml.cs  DCVExtensionGeometryGuiCS.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  packages.config
examples/csharp/extension-geometrygui-csharp/DcvExtensions/: Processor.cs  Reader.cs  SimpleLogger.cs  VirtualChannel.cs  Writer.cs
examples/csharp/extension-geometrygui-csharp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
examples/csharp/extension-geometrygui-csharp/manifest/: dcv_extension_manifest.json
examples/csharp/extension-virtual-channel-csharp/: App.config  DcvExtensionVirtualChannelsCS.csproj  Program.cs  packages.config
examples/csharp/extension-virtual-channel-csharp/DcvExtensions/: Processor.cs  Reader.cs  SimpleLogger.cs  VirtualChannel.cs  Writer.cs
examples/csharp/extension-virtual-channel-csharp/manifest/: dcv_extension_manifest.json
examples/rust/extension-virtual-channel-rust/: Cargo.toml  build.rs
examples/rust/extension-virtual-channel-rust/src/: lib.rs  main.rs  proto.rs  reader.rs  utils.rs  writer.rs
proto/: extensions.proto
