[package]
name = "dcvextension-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
prost = "0.11.0"
log = "0.4.17"
simplelog = "^0.12.0"
tokio = { version = "1.21.2", features = ["full"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
uds = { version = "0.2.6", features = ["mio_07"] }
mio = "0.7"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"


[build-dependencies]
prost-build = "0.10.4"